--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 
   <head>
+
     <meta charset="utf-8">
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/google.png">
+
   </head>
 
   <body>
@@ -14,21 +16,22 @@
 
     <header>
 
+      <ul>
+        <li>Gmail</li>
+        <li>Images</li>
+        <li><a href="#"><img src="images/icon2.png" alt="app"></a></li>
+        <li><button type="submit" class="button1">Connexion</button></li>
+      </ul>
+
     </header>
 
     <!-- header end -->
 
-    <!-- Aside -->
-
-    <aside>
-
-    </aside>
-
-    <!-- aside end -->
-
     <!-- section -->
 
     <section>
+
+      <h1><span id="g">g</span><span id="o1">o</span><span id="o2">o</span>gle</h1>
 
     </section>
 
