editing section in html and css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <meta charset="utf-8">
     <title>Google</title>
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/google.png">
 
@@ -17,7 +18,7 @@
     <header>
 
       <ul>
-        <li>Gmail</li>
+        <li><a href="https://mail.google.com">Gmail</a></li>
         <li>Images</li>
         <li><a href="#"><img src="images/icon2.png" alt="app"></a></li>
         <li><button type="submit" class="button1">Connexion</button></li>
@@ -31,7 +32,7 @@
 
     <section>
 
-      <h1><span id="g">g</span><span id="o1">o</span><span id="o2">o</span>gle</h1>
+      <h1><span id="g">g</span><span id="o1">o</span><span id="o2">o</span><span id="g2">g</span><span id="l">l</span><span id="e">e</span></h1>
 
     </section>
 
