--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 
     <header>
 
-      <ul>
-        <li><a href="https://mail.google.com">Gmail</a></li>
-        <li>Images</li>
-        <li><a href="#"><img src="images/icon2.png" alt="app"></a></li>
-        <li><button type="submit" class="button1">Connexion</button></li>
-      </ul>
+        <a href="https://mail.google.com">Gmail</a>
+        <a href="https://www.google.fr/imghp?hl=pt-PT&tab=wi&ei=iL-_WPCeMITtUtbBnIAG&ved=0EKouCBQoAQ">Images</a>
+        <a href="https://www.google.fr/intl/fr/about/products/"><img src="images/icon2.png" alt="Aplication Google"></a></li>
+        <button type="submit" class="button1">Connexion</button></li>
 
     </header>
 
@@ -30,9 +28,17 @@
 
     <!-- section -->
 
-    <section>
+    <section class="google">
 
       <h1><span id="g">g</span><span id="o1">o</span><span id="o2">o</span><span id="g2">g</span><span id="l">l</span><span id="e">e</span></h1>
+
+    </section>
+
+    <section class="search">
+
+      <form class="" action="index.html" method="post">
+        <input type="text">
+      </form>
 
     </section>
 
