recherce styled in css

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 
     </section>
 
+    <section class="link">
+
+      <a href="#">Recherche Google</a>
+      <a href="#">J'ai de la chance</a>
+
+    </section>
+
     <!-- section end -->
 
     <!-- footer -->
