commentaire to the code css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <a href="https://mail.google.com">Gmail</a>
         <a href="https://www.google.fr/imghp?hl=pt-PT&tab=wi&ei=iL-_WPCeMITtUtbBnIAG&ved=0EKouCBQoAQ">Images</a>
-        <a href="https://www.google.fr/intl/fr/about/products/"><img src="images/icon2.png" alt="Aplication Google"></a></li>
-        <button type="submit" class="button1">Connexion</button></li>
+        <a href="https://www.google.fr/intl/fr/about/products/"><img src="images/icon2.png" alt="Aplication Google"></a>
+        <button type="submit" class="button1">Connexion</button>
 
     </header>
 
@@ -36,16 +36,16 @@
 
     <section class="search">
 
-      <form class="" action="index.html" method="post">
-        <input type="text">
+      <form method="post">
+        <input type="text" value="text">
       </form>
 
     </section>
 
     <section class="link">
 
-      <a href="#">Recherche Google</a>
-      <a href="#">J'ai de la chance</a>
+      <a href="https://www.google.fr">Recherche Google</a>
+      <a href="https://www.google.com/doodles">J'ai de la chance</a>
 
     </section>
 
@@ -53,7 +53,10 @@
 
     <!-- footer -->
 
-    <footer></footer>
+    <footer>
+
+
+    </footer>
 
     <!-- footer end -->
 
