footer add in html and start edition in css

--- a/index.html
+++ b/index.html
@@ -28,24 +28,28 @@
 
     <!-- section -->
 
-    <section class="google">
+    <section>
 
-      <h1><span id="g">g</span><span id="o1">o</span><span id="o2">o</span><span id="g2">g</span><span id="l">l</span><span id="e">e</span></h1>
+      <section class="google">
 
-    </section>
+        <h1><span id="g">g</span><span id="o1">o</span><span id="o2">o</span><span id="g2">g</span><span id="l">l</span><span id="e">e</span></h1>
 
-    <section class="search">
+      </section>
 
-      <form method="post">
-        <input type="text" value="text">
-      </form>
+      <section class="search">
 
-    </section>
+        <form class="" action="index.html" method="post">
+          <input type="text">
+        </form>
 
-    <section class="link">
+      </section>
 
-      <a href="https://www.google.fr">Recherche Google</a>
-      <a href="https://www.google.com/doodles">J'ai de la chance</a>
+      <section class="link">
+
+        <a href="https://www.google.fr">Recherche Google</a>
+        <a href="https://www.google.com/doodles">J'ai de la chance</a>
+
+      </section>
 
     </section>
 
@@ -55,6 +59,9 @@
 
     <footer>
 
+      <a href="#">Publicité</a>
+      <a href="#">Entreprise</a>
+      <a href="#">À propos</a>
 
     </footer>
 
