footer done css and html

--- a/index.html
+++ b/index.html
@@ -59,9 +59,21 @@
 
     <footer>
 
-      <a href="#">Publicité</a>
-      <a href="#">Entreprise</a>
-      <a href="#">À propos</a>
+      <article class="left">
+
+        <a href="https://www.google.fr/intl/fr/ads/?fg=1">Publicité</a>
+        <a href="#">Entreprise</a>
+        <a href="#">À propos</a>
+
+      </article>
+
+      <article class="right">
+
+        <a href="#">Confidentialité</a>
+        <a href="#">Conditions</a>
+        <a href="#">Paramètres</a>
+
+      </article>
 
     </footer>
 
