page done html and css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="https://mail.google.com">Gmail</a>
         <a href="https://www.google.fr/imghp?hl=pt-PT&tab=wi&ei=iL-_WPCeMITtUtbBnIAG&ved=0EKouCBQoAQ">Images</a>
         <a href="https://www.google.fr/intl/fr/about/products/"><img src="images/icon2.png" alt="Aplication Google"></a>
-        <button type="submit" class="button1">Connexion</button>
+        <a href="https://accounts.google.com" class="log">Connexion</a>
 
     </header>
 
@@ -59,21 +59,21 @@
 
     <footer>
 
-      <article class="left">
+      <p class="left">
 
         <a href="https://www.google.fr/intl/fr/ads/?fg=1">Publicité</a>
-        <a href="#">Entreprise</a>
-        <a href="#">À propos</a>
+        <a href="https://www.google.fr/services/?fg=1#?modal_active=none">Entreprise</a>
+        <a href="https://www.google.fr/intl/fr/about/">À propos</a>
 
-      </article>
+      </p>
 
-      <article class="right">
+      <p class="right">
 
-        <a href="#">Confidentialité</a>
-        <a href="#">Conditions</a>
-        <a href="#">Paramètres</a>
+        <a href="https://www.google.fr/intl/fr/policies/privacy/?fg=1">Confidentialité</a>
+        <a href="https://www.google.fr/intl/fr/policies/terms/regional.html">Conditions</a>
+        <a href="https://www.google.fr/preferences?hl=fr">Paramètres</a>
 
-      </article>
+      </p>
 
     </footer>
 
